--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <title>Hello, world!</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<h1>Hello, world! Привет, мир, о!</h1>
+<h3>О, да, привет, мир!</h3>
 
 </body>
 </html>
