--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,16 @@
 
   <title>Hello, world!</title>
 </head>
-<body>
-<h1>Hello, world! Привет, мир, о!</h1>
-<h3>О, да, привет, мир!</h3>
 
+<body>
+  <header>
+    Header content
+  </header>
+  <main>
+    <h1>Hello world!</h1>
+  </main>
+  <footer>
+    footer content
+  </footer>
 </body>
 </html>
