--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,84 @@
 
 <body>
   <header>
-    Header content
+
+    <div class="disclaimers">
+
+      <div class="disclaimer">
+        <div class="container">
+          <div class="row py-3 small align-items-center">
+            <div class="col">
+              <div class="h5 mb-1">Cookies</div>
+              <div>Our website uses Google Analytics to analyze our traffic.
+                <br/>
+                To learn how you can control Google's use of your data and how you can opt out
+                <a href="#" class="link link-white link-double">click here</a>.</div>
+            </div>
+            <div class="col-2 col-md-3 text-nowrap text-right text-muted">
+              <span class="d-none d-md-inline">Accept and close</span>
+              <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="disclaimer">
+        <div class="container">
+          <div class="row py-3 small align-items-center">
+            <div class="col">
+              <div class="h5 mb-1">Privacy Policy</div>
+              <div>Please read our <a href="#" class="link link-white link-double">Privacy Policy</a> before accepting it.</div>
+            </div>
+            <div class="col-2 col-md-3 text-nowrap text-right text-muted">
+              <span class="d-none d-md-inline">Accept and close</span>
+              <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="container">
+      <nav class="navbar navbar-expand-md navbar-dark px-0">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainMenu">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link ml-md-0" href="#">About game</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Forum</a>
+            </li>
+          </ul>
+          <div class="dropdown">
+            <a class="btn btn-dark dropdown-toggle pl-0 pl-md-2 pr-md-0 " href="#" role="button" id="dropdownMenuLink"
+               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Рус
+            </a>
+            <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="#">Eng</a>
+              <a class="dropdown-item" href="#">Fra</a>
+              <a class="dropdown-item" href="#">Ita</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+
   </header>
+
   <main>
     <h1>Hello world!</h1>
+    <p>Вот тут у нас какой-то текст, а в нем <a href="https://ya.ru" class="link link-double">ссылка куда-то
+      далеко</a> и
+      после нее тоже какой-то текст...<br/>The secondary border is added with a pseudo element. It is set with absolute positioning and inset with top/left/bottom/right values. This will also have a border and is kept beneath the content (preserving, for example, selectability of text and clickability of links) by giving it a negative z-index value. Careful with negative z-index, if this is within yet another element with it's own background color, this may not work.</p>
+    <img src="/assets/img/close-big.gif"/>
   </main>
   <footer>
     footer content
