--- a/src/index.html
+++ b/src/index.html
@@ -3,94 +3,151 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="address=no">
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="/">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
   <title>Hello, world!</title>
 </head>
 
 <body>
-  <header>
+<header>
 
-    <div class="disclaimers">
+  <div class="disclaimers">
 
-      <div class="disclaimer">
-        <div class="container">
-          <div class="row py-3 small align-items-center">
-            <div class="col">
-              <div class="h5 mb-1">Cookies</div>
-              <div>Our website uses Google Analytics to analyze our traffic.
-                <br/>
-                To learn how you can control Google's use of your data and how you can opt out
-                <a href="#" class="link link-white link-double">click here</a>.</div>
+    <div class="disclaimer">
+      <div class="container">
+        <div class="row py-3 small align-items-center">
+          <div class="col">
+            <div class="h5 mb-1">Cookies</div>
+            <div>Our website uses Google Analytics to analyze our traffic.
+              <br/>
+              To learn how you can control Google's use of your data and how you can opt out
+              <a href="#" class="link link-white link-double">click here</a>.
             </div>
-            <div class="col-2 col-md-3 text-nowrap text-right text-muted">
-              <span class="d-none d-md-inline">Accept and close</span>
-              <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
+          </div>
+          <div class="col-2 col-md-3 text-nowrap text-right text-muted">
+            <span class="d-none d-md-inline">Accept and close</span>
+            <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="disclaimer">
+      <div class="container">
+        <div class="row py-3 small align-items-center">
+          <div class="col">
+            <div class="h5 mb-1">Privacy Policy</div>
+            <div>Please read our <a href="#" class="link link-white link-double">Privacy Policy</a> before accepting it.
             </div>
+          </div>
+          <div class="col-2 col-md-3 text-nowrap text-right text-muted">
+            <span class="d-none d-md-inline">Accept and close</span>
+            <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="container">
+    <nav class="navbar navbar-expand-md navbar-dark px-0">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu"
+              aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainMenu">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link ml-md-0" href="#">About game</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Forum</a>
+          </li>
+        </ul>
+        <div class="dropdown">
+          <a class="btn btn-dark dropdown-toggle pl-0 pl-md-2 pr-md-0 " href="#" role="button" id="dropdownMenuLink"
+             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Рус
+          </a>
+          <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="#">Eng</a>
+            <a class="dropdown-item" href="#">Fra</a>
+            <a class="dropdown-item" href="#">Ita</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+</header>
+
+<main>
+  <h1>Hello world!</h1>
+  <p>Вот тут у нас какой-то текст, а в нем <a href="https://ya.ru" class="link link-double">ссылка куда-то
+    далеко</a> и
+    после нее тоже какой-то текст...<br/>The secondary border is added with a pseudo element. It is set with absolute
+    positioning and inset with top/left/bottom/right values. This will also have a border and is kept beneath the
+    content (preserving, for example, selectability of text and clickability of links) by giving it a negative z-index
+    value. Careful with negative z-index, if this is within yet another element with it's own background color, this may
+    not work.</p>
+  <img src="/assets/img/close-big.gif"/>
+</main>
+
+<footer class="dark">
+  <div class="container small py-3 py-lg-5">
+    <div class="row d-flex align-items-center justify-content-between">
+
+      <div class="col col-md-12 col-lg-3 order-lg-3 text-center text-lg-left mb-4 mb-lg-0">
+        <div class="mb-2 text-nowrap">More about population zero</div>
+        <div>
+          <a href="#" class="social-icons fb">&nbsp;</a>
+          <a href="#" class="social-icons vk">&nbsp;</a>
+          <a href="#" class="social-icons tw">&nbsp;</a>
+          <a href="#" class="social-icons yt">&nbsp;</a>
+        </div>
+      </div>
+
+      <div class="col order-md-4 text-center text-md-right col-md-6 col-lg-4 mb-4 mb-md-0">
+        <div class="row no-gutters d-inline-flex flex-nowrap align-items-center">
+          <div class="col text-center text-lg-left">
+            <p class="text-nowrap">
+              <a href="#" class="link link-triple-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
+            </p>
+            <div>&copy; 2018 Enplex. All rights reserved.</div>
+          </div>
+          <div class="col">
+            <img class="ml-2 ml-lg-3" src="/assets/img/16plus.png" width="56" height="66" alt="16+">
           </div>
         </div>
       </div>
 
-      <div class="disclaimer">
-        <div class="container">
-          <div class="row py-3 small align-items-center">
-            <div class="col">
-              <div class="h5 mb-1">Privacy Policy</div>
-              <div>Please read our <a href="#" class="link link-white link-double">Privacy Policy</a> before accepting it.</div>
-            </div>
-            <div class="col-2 col-md-3 text-nowrap text-right text-muted">
-              <span class="d-none d-md-inline">Accept and close</span>
-              <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
-            </div>
+      <div class="col order-md-1 col-md-6 col-lg-4 px-0 text-nowrap">
+        <div class="row d-flex flex-nowrap">
+          <div class="col border-right border-dark">
+            <div class="footer-logo enplex" title="Enplex games">&nbsp;</div>
+          </div>
+          <div class="col ">
+            <div class="footer-logo pz" title="Population zero">&nbsp;</div>
           </div>
         </div>
       </div>
 
+      <div class="col col-lg-1 d-none d-lg-block order-lg-2">&nbsp;</div>
+
     </div>
-
-    <div class="container">
-      <nav class="navbar navbar-expand-md navbar-dark px-0">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mainMenu">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link ml-md-0" href="#">About game</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">News</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Forum</a>
-            </li>
-          </ul>
-          <div class="dropdown">
-            <a class="btn btn-dark dropdown-toggle pl-0 pl-md-2 pr-md-0 " href="#" role="button" id="dropdownMenuLink"
-               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Рус
-            </a>
-            <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="#">Eng</a>
-              <a class="dropdown-item" href="#">Fra</a>
-              <a class="dropdown-item" href="#">Ita</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </div>
-
-  </header>
-
-  <main>
-    <h1>Hello world!</h1>
-    <p>Вот тут у нас какой-то текст, а в нем <a href="https://ya.ru" class="link link-double">ссылка куда-то
-      далеко</a> и
-      после нее тоже какой-то текст...<br/>The secondary border is added with a pseudo element. It is set with absolute positioning and inset with top/left/bottom/right values. This will also have a border and is kept beneath the content (preserving, for example, selectability of text and clickability of links) by giving it a negative z-index value. Careful with negative z-index, if this is within yet another element with it's own background color, this may not work.</p>
-    <img src="/assets/img/close-big.gif"/>
-  </main>
-  <footer>
-    footer content
-  </footer>
+</footer>
 </body>
 </html>
