--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
-  <title>Hello, world!</title>
+  <title>Population zero</title>
 </head>
 
 <body>
