--- a/src/404.html
+++ b/src/404.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="address=no">
@@ -14,51 +12,11 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
-  <title>Population zero</title>
+  <title>Page not found | Population zero</title>
 </head>
 
-<body>
+<body class="error-404">
 <header>
-
-  <div class="disclaimers">
-
-    <div class="disclaimer">
-      <div class="container">
-        <div class="row py-3 small align-items-center">
-          <div class="col">
-            <div class="h5 mb-1">Cookies</div>
-            <div>Our website uses Google Analytics to analyze our traffic.
-              <br/>
-              To learn how you can control Google's use of your data and how you can opt out
-              <a href="#" class="link link-white link-double">click here</a>.
-            </div>
-          </div>
-          <div class="col-2 col-md-3 text-nowrap text-right text-muted">
-            <span class="d-none d-md-inline">Accept and close</span>
-            <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="disclaimer">
-      <div class="container">
-        <div class="row py-3 small align-items-center">
-          <div class="col">
-            <div class="h5 mb-1">Privacy Policy</div>
-            <div>Please read our <a href="#" class="link link-white link-double">Privacy Policy</a> before accepting it.
-            </div>
-          </div>
-          <div class="col-2 col-md-3 text-nowrap text-right text-muted">
-            <span class="d-none d-md-inline">Accept and close</span>
-            <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
   <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark px-0">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu"
@@ -94,22 +52,16 @@
 
 </header>
 
-<main>
-  <div class="container">
-    <h1>Hello world!</h1>
-    <p>Вот тут у нас какой-то текст, а в нем <a href="https://ya.ru" class="link link-double">ссылка куда-то
-      далеко</a> и
-      после нее тоже какой-то текст...<br/>The secondary border is added with a pseudo element. It is set with absolute
-      positioning and inset with top/left/bottom/right values. This will also have a border and is kept beneath the
-      content (preserving, for example, selectability of text and clickability of links) by giving it a negative z-index
-      value. Careful with negative z-index, if this is within yet another element with it's own background color, this may
-      not work.</p>
-    <img src="/assets/img/close-big.gif"/>
+<main class="d-flex align-items-center justify-content-center">
+  <div class="ml-5 pl-4 pl-sm-5">
+    <h1 class="px-2 py-1 text-nowrap">ERROR 404</h1>
+    <div class="px-2">
+      <a class="link link-double link-white" href="#">back to home</a>
+    </div>
   </div>
 </main>
 
-
-<footer class=""> <!-- set class "dark" for black footer -->
+<footer class="dark"> <!-- set class "dark" for black footer -->
   <div class="container small py-3 py-lg-5">
     <div class="row d-flex align-items-center justify-content-between">
 
