Index page with info

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <title>Population zero</title>
 </head>
 
-<body>
+<body class="bg">
 <header>
 
   <div class="disclaimers">
@@ -30,7 +30,7 @@
             <div>Our website uses Google Analytics to analyze our traffic.
               <br/>
               To learn how you can control Google's use of your data and how you can opt out
-              <a href="#" class="link link-white link-double">click here</a>.
+              <a href="#" class="link link-double">click here</a>.
             </div>
           </div>
           <div class="col-2 col-md-3 text-nowrap text-right text-muted">
@@ -46,7 +46,7 @@
         <div class="row py-3 small align-items-center">
           <div class="col">
             <div class="h5 mb-1">Privacy Policy</div>
-            <div>Please read our <a href="#" class="link link-white link-double">Privacy Policy</a> before accepting it.
+            <div>Please read our <a href="#" class="link link-double">Privacy Policy</a> before accepting it.
             </div>
           </div>
           <div class="col-2 col-md-3 text-nowrap text-right text-muted">
@@ -94,17 +94,15 @@
 
 </header>
 
-<main>
-  <div class="container">
-    <h1>Hello world!</h1>
-    <p>Вот тут у нас какой-то текст, а в нем <a href="https://ya.ru" class="link link-double">ссылка куда-то
-      далеко</a> и
-      после нее тоже какой-то текст...<br/>The secondary border is added with a pseudo element. It is set with absolute
-      positioning and inset with top/left/bottom/right values. This will also have a border and is kept beneath the
-      content (preserving, for example, selectability of text and clickability of links) by giving it a negative z-index
-      value. Careful with negative z-index, if this is within yet another element with it's own background color, this may
-      not work.</p>
-    <img src="/assets/img/close-big.gif"/>
+<main class="d-flex align-items-center justify-content-center">
+  <div class="text-center my-5">
+    <h1>ИЗМЕНЕНИЕ<br/>ЛОГИНА</h1>
+    <div class="my-5">
+      Ваш Логин/Email успешно изменен
+    </div>
+    <div>
+      <a class="link link-double stroke-full text-uppercase" href="#">На главную</a>
+    </div>
   </div>
 </main>
 
@@ -127,7 +125,7 @@
         <div class="row no-gutters d-inline-flex flex-nowrap align-items-center">
           <div class="col text-center text-lg-left">
             <p class="text-nowrap">
-              <a href="#" class="link link-triple-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
+              <a href="#" class="link link-triple stroke-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
             </p>
             <div>&copy; 2018 Enplex. All rights reserved.</div>
           </div>
