--- a/src/404.html
+++ b/src/404.html
@@ -56,7 +56,7 @@
   <div class="ml-5 pl-4 pl-sm-5">
     <h1 class="px-2 py-1 text-nowrap">ERROR 404</h1>
     <div class="px-2">
-      <a class="link link-double link-white" href="#">back to home</a>
+      <a class="link link-double" href="#">back to home</a>
     </div>
   </div>
 </main>
@@ -79,7 +79,7 @@
         <div class="row no-gutters d-inline-flex flex-nowrap align-items-center">
           <div class="col text-center text-lg-left">
             <p class="text-nowrap">
-              <a href="#" class="link link-triple-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
+              <a href="#" class="link link-triple stroke-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
             </p>
             <div>&copy; 2018 Enplex. All rights reserved.</div>
           </div>
