IE footer layout fix

--- a/src/404.html
+++ b/src/404.html
@@ -75,16 +75,17 @@
         </div>
       </div>
 
-      <div class="col order-md-4 text-center text-md-right col-md-6 col-lg-4 mb-4 mb-md-0">
-        <div class="row no-gutters d-inline-flex flex-nowrap align-items-center">
-          <div class="col text-center text-lg-left">
+      <div class="col order-md-4 col-md-6 col-lg-4 mb-4 mb-md-0">
+        <div class="row no-gutters d-flex flex-nowrap align-items-center mx-auto ml-md-auto"
+             style="max-width: 300px">
+          <div class="col-9 text-center text-lg-left">
             <p class="text-nowrap">
               <a href="#" class="link link-triple stroke-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
             </p>
-            <div>&copy; 2018 Enplex. All rights reserved.</div>
+            <div class="text-nowrap">&copy; 2018 Enplex. All rights reserved.</div>
           </div>
           <div class="col">
-            <img class="ml-2 ml-lg-3" src="/assets/img/16plus.png" width="56" height="66" alt="16+">
+            <div class="ml-2 ml-lg-3 img16plus" title="16+">&nbsp;</div>
           </div>
         </div>
       </div>
