--- a/src/hello.html
+++ b/src/hello.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="address=no">
@@ -12,10 +14,10 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
-  <title>Page not found | Population zero</title>
+  <title>Hello | Population zero</title>
 </head>
 
-<body class="error-404">
+<body>
 <header>
   <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark px-0">
@@ -49,19 +51,26 @@
       </div>
     </nav>
   </div>
-
 </header>
 
 <main class="d-flex align-items-center justify-content-center">
-  <div class="ml-5 pl-4 pl-sm-5">
-    <h1 class="px-2 py-1 text-nowrap">ERROR 404</h1>
-    <div class="px-2">
-      <a class="link link-double" href="#">back to home</a>
+  <div class="text-center my-5">
+    <h1 class="text-uppercase header-narrow">Ваш аккаунт population zero создан!</h1>
+    <div class="my-5">
+      <span class="text-nowrap">Чтобы начать играть,</span>
+      <span class="text-nowrap">скачайте и установите игру.</span>
+    </div>
+    <div class="mx-auto py-3 text-left download-client">
+      <div class="h5 mb-0 text-uppercase font-weight-bold">
+        <a href="#">Скачать клиент</a>
+      </div>
+      <div class="text-muted">версия 43.5.3</div>
     </div>
   </div>
 </main>
 
-<footer class="dark"> <!-- set class "dark" for black footer -->
+
+<footer class=""> <!-- set class "dark" for black footer -->
   <div class="container small py-3 py-lg-5">
     <div class="row d-flex align-items-center justify-content-between">
 
