--- a/src/index.html
+++ b/src/index.html
@@ -124,14 +124,14 @@
       <div class="col order-md-4 col-md-6 col-lg-4 mb-4 mb-md-0">
         <div class="row no-gutters d-flex flex-nowrap align-items-center mx-auto ml-md-auto"
              style="max-width: 300px">
-          <div class="col-9 text-center text-lg-left">
+          <div class="col text-center text-lg-left">
             <p class="text-nowrap">
               <a href="#" class="link link-triple stroke-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
             </p>
             <div class="text-nowrap">&copy; 2018 Enplex. All rights reserved.</div>
           </div>
           <div class="col">
-            <div class="ml-2 ml-lg-3 img16plus" title="16+">&nbsp;</div>
+            <div class="ml-2 ml-lg-3 float-right img16plus" title="16+">&nbsp;</div>
           </div>
         </div>
       </div>
@@ -150,6 +150,7 @@
       <div class="col col-lg-1 d-none d-lg-block order-lg-2">&nbsp;</div>
 
     </div>
+  </div>
 </footer>
 </body>
 </html>
