Finish registration page

--- a/src/reg-finish.html
+++ b/src/reg-finish.html
@@ -14,10 +14,10 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
-  <title>Hello | Population zero</title>
+  <title>Finish registration | Population zero</title>
 </head>
 
-<body>
+<body class="bg">
 <header>
   <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark px-0">
@@ -51,20 +51,20 @@
       </div>
     </nav>
   </div>
+
 </header>
 
 <main class="d-flex align-items-center justify-content-center">
   <div class="text-center my-5">
-    <h1 class="text-uppercase block-narrow">Ваш аккаунт population zero создан!</h1>
+    <h1 class="text-uppercase block-narrow">Завершите<br/>регистрацию</h1>
+    <div class="my-5 block-narrow">Перейдите в&nbsp;свой <a href="#" class="text-underline">почтовый ящик</a>
+      и&nbsp;нажмите кнопку &laquo;Завершить&nbsp;регистрацию&raquo; в&nbsp;письме от&nbsp;Population Zero.</div>
     <div class="my-5">
-      <span class="text-nowrap">Чтобы начать играть,</span>
-      <span class="text-nowrap">скачайте и установите игру.</span>
+      <a class="link link-double stroke-full text-uppercase" href="#">перейти в почтовый ящик</a>
     </div>
-    <div class="mx-auto py-3 text-left download-client">
-      <div class="h5 mb-0 text-uppercase font-weight-bold">
-        <a href="#">Скачать клиент</a>
-      </div>
-      <div class="text-muted">версия 43.5.3</div>
+
+    <div class="small">
+      <a class="link link-double stroke-full text-dark" href="#">Не получили письмо?</a>
     </div>
   </div>
 </main>
