--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 
 <main class="d-flex align-items-center justify-content-center">
   <div class="text-center my-5">
-    <h1>ИЗМЕНЕНИЕ<br/>ЛОГИНА</h1>
+    <h1 class="text-uppercase block-narrow">ИЗМЕНЕНИЕ<br/>ЛОГИНА</h1>
     <div class="my-5">
       Ваш Логин/Email успешно изменен
     </div>
