--- a/src/hello.html
+++ b/src/hello.html
@@ -53,7 +53,7 @@
   </div>
 </header>
 
-<main class="d-flex align-items-center justify-content-center">
+<main class="container d-flex align-items-center justify-content-center">
   <div class="text-center my-5">
     <h1 class="text-uppercase block-narrow">Ваш аккаунт population zero создан!</h1>
     <div class="my-5">
