--- a/src/modal.html
+++ b/src/modal.html
@@ -54,7 +54,7 @@
 
 </header>
 
-<main class="d-flex align-items-center justify-content-center">
+<main class="container d-flex align-items-center justify-content-center">
   <div class="text-center my-5">
     <h1 class="text-uppercase block-narrow">Modal dialog example</h1>
     <div class="my-5 block-narrow">Please, press the button below</div>
