--- a/src/reg-finish.html
+++ b/src/reg-finish.html
@@ -54,13 +54,13 @@
 
 </header>
 
-<main class="d-flex align-items-center justify-content-center">
+<main class="container d-flex align-items-center justify-content-center">
   <div class="text-center my-5">
     <h1 class="text-uppercase block-narrow">Завершите<br/>регистрацию</h1>
     <div class="my-5 block-narrow">Перейдите в&nbsp;свой <a href="#" class="text-underline">почтовый ящик</a>
       и&nbsp;нажмите кнопку &laquo;Завершить&nbsp;регистрацию&raquo; в&nbsp;письме от&nbsp;Population Zero.</div>
     <div class="my-5">
-      <a class="link link-double stroke-full text-uppercase" href="#">перейти в почтовый ящик</a>
+      <a class="link link-double stroke-full font-weight-bold text-uppercase" href="#">перейти в почтовый ящик</a>
     </div>
 
     <div class="small">
