--- a/src/404.html
+++ b/src/404.html
@@ -52,7 +52,7 @@
 
 </header>
 
-<main class="d-flex align-items-center justify-content-center">
+<main class="container d-flex align-items-center justify-content-center">
   <div class="ml-5 pl-4 pl-sm-5">
     <h1 class="px-2 py-1 text-nowrap">ERROR 404</h1>
     <div class="px-2">
