Common layout changed

--- a/src/404.html
+++ b/src/404.html
@@ -52,11 +52,15 @@
 
 </header>
 
-<main class="container d-flex align-items-center justify-content-center">
-  <div class="ml-5 pl-4 pl-sm-5">
-    <h1 class="px-2 py-1 text-nowrap">ERROR 404</h1>
-    <div class="px-2">
-      <a class="link link-double" href="#">back to home</a>
+<main class="d-flex align-items-center justify-content-center flex-column">
+  <div class="container">
+    <div class="block-narrow d-flex justify-content-end">
+      <div>
+        <h1 class="px-2 py-1 text-nowrap">ERROR 404</h1>
+        <div class="px-2">
+          <a class="link link-double" href="#">back to home</a>
+        </div>
+      </div>
     </div>
   </div>
 </main>
