--- a/src/login.html
+++ b/src/login.html
@@ -53,10 +53,10 @@
   </div>
 </header>
 
-<main class="container d-flex align-items-center justify-content-center">
+<main class="d-flex align-items-center justify-content-center flex-column">
 
-  <div class="text-center my-5">
-    <h1 class="text-uppercase block-narrow mx-auto">Вход в аккаунт</h1>
+  <div class="container text-center my-5">
+    <h1 class="text-uppercase block-narrow">Вход в аккаунт</h1>
     <div class="mt-5">
       Используйте&nbsp;свои&nbsp;данные с&nbsp;других&nbsp;сервисов, чтобы&nbsp;войти&nbsp;быстрее:
     </div>
