--- a/src/beta.html
+++ b/src/beta.html
@@ -53,10 +53,10 @@
   </div>
 </header>
 
-<main class="container d-flex align-items-center justify-content-center">
+<main class="d-flex align-items-center justify-content-center flex-column">
 
-  <div class="text-center my-5">
-    <h1 class="text-uppercase block-narrow mx-auto">
+  <div class="container text-center my-5">
+    <h1 class="text-uppercase block-narrow">
       Запись
       <span class="text-nowrap">на закрытое</span><br/>
       бета-тестирование
