--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,8 @@
 
 </header>
 
-<main class="container d-flex align-items-center justify-content-center">
-  <div class="text-center my-5">
+<main class="d-flex align-items-center justify-content-center flex-column">
+  <div class="container text-center my-5">
     <h1 class="text-uppercase block-narrow">Изменение<br/>логина</h1>
     <div class="my-5">
       Ваш Логин/Email успешно изменен
