--- a/src/reg-finish.html
+++ b/src/reg-finish.html
@@ -54,8 +54,8 @@
 
 </header>
 
-<main class="container d-flex align-items-center justify-content-center">
-  <div class="text-center my-5">
+<main class="d-flex align-items-center justify-content-center flex-column">
+  <div class="container text-center my-5">
     <h1 class="text-uppercase block-narrow">Завершите<br/>регистрацию</h1>
     <div class="my-5 block-narrow">Перейдите в&nbsp;свой <a href="#" class="text-underline">почтовый ящик</a>
       и&nbsp;нажмите кнопку &laquo;Завершить&nbsp;регистрацию&raquo; в&nbsp;письме от&nbsp;Population Zero.</div>
