Common layout changed

--- a/src/beta.html
+++ b/src/beta.html
@@ -14,7 +14,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
-  <title>Hello | Population zero</title>
+  <title>Beta test form | Population zero</title>
 </head>
 
 <body>
@@ -53,10 +53,10 @@
   </div>
 </header>
 
-<main class="container d-flex align-items-center justify-content-center">
+<main class="d-flex align-items-center justify-content-center flex-column">
 
-  <div class="text-center my-5">
-    <h1 class="text-uppercase block-narrow mx-auto">
+  <div class="container text-center my-5">
+    <h1 class="text-uppercase block-narrow">
       Запись
       <span class="text-nowrap">на закрытое</span><br/>
       бета-тестирование
