--- a/src/cabinet.html
+++ b/src/cabinet.html
@@ -14,7 +14,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
-  <title>Hello | Population zero</title>
+  <title>Cabinet | Population zero</title>
 </head>
 
 <body>
@@ -54,19 +54,30 @@
 </header>
 
 <main class="d-flex align-items-center justify-content-center flex-column">
+
   <div class="container text-center my-5">
-    <h1 class="text-uppercase block-narrow">Ваш аккаунт population zero создан!</h1>
-    <div class="my-5">
-      <span class="text-nowrap">Чтобы начать играть,</span>
-      <span class="text-nowrap">скачайте и установите игру.</span>
-    </div>
-    <div class="mx-auto py-3 text-left download-client">
-      <div class="h5 mb-0 text-uppercase font-weight-bold">
-        <a href="#">Скачать клиент</a>
+    <h1 class="text-uppercase block-narrow">Личный кабинет</h1>
+  </div>
+
+  <div class="my-5 py-5 bonus-row">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <h6 class="text-uppercase">Получить бонусы и подарки</h6>
+          <form>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">Button</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
-      <div class="text-muted">версия 43.5.3</div>
     </div>
   </div>
+
+
 </main>
 
 
