--- a/src/cabinet.html
+++ b/src/cabinet.html
@@ -64,14 +64,16 @@
       <div class="row">
         <div class="col text-center">
           <h6 class="text-uppercase">Получить бонусы и подарки</h6>
-          <form>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Button</button>
+          <div class="form mx-auto mt-3">
+            <form method="post" action="" class="needs-validation" novalidate>
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Введите номер кода">
+                <div class="input-group-append">
+                  <button class="btn btn-outline" type="submit">отправить</button>
+                </div>
               </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </div>
