Oauth links updated

--- a/src/login.html
+++ b/src/login.html
@@ -61,11 +61,26 @@
       Используйте&nbsp;свои&nbsp;данные с&nbsp;других&nbsp;сервисов, чтобы&nbsp;войти&nbsp;быстрее:
     </div>
     <div>
-      <a class="oauth-link facebook color" href="#"><span class="oauth-icon"></span><br/>Facebook</a>
-      <a class="oauth-link google color" href="#"><span class="oauth-icon"></span><br/>Google</a>
-      <a class="oauth-link vkontakte color" href="#"><span class="oauth-icon"></span><br/>ВКонтакте</a>
-      <a class="oauth-link twitch color" href="#"><span class="oauth-icon"></span><br/>Twitch</a>
-      <a class="oauth-link steam color" href="#"><span class="oauth-icon"></span><br/>Steam</a>
+      <a class="oauth-link facebook color" href="#">
+        <span class="oauth-icon"></span>
+        <span class="d-none d-sm-inline"><br/>Facebook</span>
+      </a>
+      <a class="oauth-link google color" href="#">
+        <span class="oauth-icon"></span>
+        <span class="d-none d-sm-inline"><br/>Google</span>
+      </a>
+      <a class="oauth-link vkontakte color" href="#">
+        <span class="oauth-icon"></span>
+        <span class="d-none d-sm-inline"><br/>ВКонтакте</span>
+      </a>
+      <a class="oauth-link twitch color" href="#">
+        <span class="oauth-icon"></span>
+        <span class="d-none d-sm-inline"><br/>Twitch</span>
+      </a>
+      <a class="oauth-link steam color" href="#">
+        <span class="oauth-icon"></span>
+        <span class="d-none d-sm-inline"><br/>Steam</span>
+      </a>
     </div>
     <hr/>
     <div class="mt-4 mb-2">
